new responsive function testing

--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,44 @@
+html {
+    font-size: 16px;
+}
+
 body {
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Nosifer', cursive;
     background-color: black;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+main {
+    
+}
+
+.game {
+    height: 100vh;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
 }
 
 .buttonDiv {
-    width: 300px;
-    text-align: center;
     margin: 0 auto;
     padding: 0;
+    width: 18.75rem;
+    max-width: 100%;
 }
 
 .button {
-    width: 80px;
-    height: 70px;
-    margin-bottom: 2px;
+    width: 5rem;
+    height: 4.375rem;
+    margin-bottom: .125rem;
     background-color: black;
-    border: 1px solid darkred;
-    font-size: 24px;
+    border: .0625rem solid darkred;
+    font-size: 1.5rem;
     font-family: 'Nosifer', cursive;
     color: orange;
 }
@@ -73,12 +93,12 @@ h1 {
 }
 
 p{
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 #winner {
     color: darkred;
-    font-size: 60px;
+    font-size: 3.75rem;
 } 
 
 #message{
@@ -86,13 +106,13 @@ p{
 }
 
 #reset {
-    margin: 50px;
+    margin: 3.125rem;
     background-color: black;
     font-family: 'Nosifer', cursive;
     color: orange;
     background-color: black;
-    border: 1px solid darkred;
-    border-radius: 40px;
+    border: .0625rem solid darkred;
+    border-radius: 2.5rem;
     transition: 0.2s all;
     cursor: pointer;
 }
@@ -104,6 +124,5 @@ p{
 
 #reset:active {
     transform: scale(.98);
-    box-shadow: 3px 2px 22px 1px orange;
+    box-shadow: .1875rem .125rem 1.375rem .0625rem orange;
 }
-
