--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 28px;
+    font-size: 24px;
 }
 
 body {
@@ -10,6 +10,10 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+}
+
+main {
+    height: 100vh;
 }
 
 .game {
