--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ main {
     height: 100vh;
 }
 
+
 .game {
     height: 100vh;
     display: flex;
@@ -43,6 +44,13 @@ main {
 
 h1 {
     color: orange;
+    margin-bottom: 0;
+}
+
+#instructions {
+    color: orange;
+    font-size: 1rem;
+    margin-top: 0;
 }
 
 #a1 {
@@ -61,10 +69,6 @@ h1 {
 
 #b1 {
     border-left: none;
-}
-
-#b2 {
-  
 }
 
 
